src/objects/ACED_KPO__c.object
<CustomObject>
    <fields>
        <fullName>Affiliate__c</fullName>
        <inlineHelpText>This is a helptext for Affilliate</inlineHelpText>
        <label>Affiliate</label>
        <picklist>
            <controllingField>HUB__c</controllingField>
            <picklistValues>
                <fullName>ACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus &amp; Malta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macedonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montengro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovakia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand_Indication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is a helptext for Brand Indication</inlineHelpText>
        <label>Brand Indication</label>
        <referenceTo>ACED_Brand_Indications__c</referenceTo>
        <relationshipLabel>KPO&apos;s</relationshipLabel>
        <relationshipName>KPO_s</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Load_Id__c</fullName>
        <label>Data Load Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>This is a helptext for Description</inlineHelpText>
        <label>Name Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HUB__c</fullName>
        <inlineHelpText>This is a helptext for HUB</inlineHelpText>
        <label>HUB</label>
        <picklist>
            <picklistValues>
                <fullName>ACE HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK HUB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MOT__c</fullName>
        <inlineHelpText>This is a helptext for MOT</inlineHelpText>
        <label>MOT</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$User.ACED_HUB__c</field>
                <operation>equals</operation>
                <valueField>ACED_MOT__c.HUB__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.ACED_HUB__c</field>
                <operation>equals</operation>
                <value>ACE HUB</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACED_MOT__c</referenceTo>
        <relationshipLabel>KPO&apos;s</relationshipLabel>
        <relationshipName>KPO_s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>This is a helptext for Notes</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Player__c</fullName>
        <inlineHelpText>This is a helptext for Player</inlineHelpText>
        <label>Player</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <inlineHelpText>This is a helptext for Year</inlineHelpText>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>KPO</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MOT__c</columns>
        <columns>Brand_Indication__c</columns>
        <columns>Year__c</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_HUB_KOP_s</fullName>
        <columns>NAME</columns>
        <columns>Affiliate__c</columns>
        <columns>HUB__c</columns>
        <columns>MOT__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HUB__c</field>
            <operation>equals</operation>
        </filters>
        <label>My HUB KOP&apos;s</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>KPO Short Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPO&apos;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACED_KPO_Hub_Matching</fullName>
        <active>true</active>
        <description>User can only select Hub to which he belongs. This wont be applied for ACE Hubs</description>
        <errorConditionFormula>AND((TEXT($User.ACED_HUB__c)&lt;&gt;&apos;ACE HUB&apos;),IF(TEXT(HUB__c)&lt;&gt; TEXT($User.ACED_HUB__c),TRUE,FALSE))</errorConditionFormula>
        <errorDisplayField>HUB__c</errorDisplayField>
        <errorMessage>You cannot select a HUB, Which you are not part of.</errorMessage>
    </validationRules>
</CustomObject>